karnc/tests/fixtures/negative/132_given_cross_ctx_not_consumed/src/platform/clk.karn
context platform.clk

exports capability { Clock }

capability Clock {
  fn now() -> Effect[Int]
}

provides Clock = SystemClock {
  fn now() -> Effect[Int] {
    0
  }
}
